--- a/stadium.css
+++ b/stadium.css
@@ -386,6 +386,13 @@
     border-bottom: 10px solid transparent;
     margin-right:5px;
 }
+.icon-sign:after {
+    content: ":::";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 #main a{
     text-decoration: none;
     color:var(--grey);
